# jlrobot_ws

./: PROJECT_WORKLOG.md
docs/: architecture.md  torque_control_architecture.md
src/robot_core/: CMakeLists.txt  POTENTIAL_FIELD_LIMITATIONS.md  package.xml
src/robot_core/config/: experiment_examples_demo.yaml
src/robot_core/include/robot_core/: control_reference.hpp  experiment_examples.hpp  ik_solver.hpp  joint_space_pd_controller.hpp  moveit_obstacle_avoidance_planner.hpp  obstacle_avoidance_planner.hpp  torque_controller_base.hpp  trajectory_planner.hpp
src/robot_core/include/robot_core/control/common/: control_state.hpp  torque_controller_base.hpp
src/robot_core/include/robot_core/control/motion/joint_space/: joint_space_pd_controller.hpp
src/robot_core/include/robot_core/examples/: experiment_examples.hpp
src/robot_core/include/robot_core/filters/: filters.hpp
src/robot_core/include/robot_core/model/: robot_model.hpp
src/robot_core/include/robot_core/planning/avoidance/: moveit_obstacle_avoidance_planner.hpp  obstacle_avoidance_planner.hpp
src/robot_core/include/robot_core/planning/ik/: ik_solver.hpp
src/robot_core/include/robot_core/planning/trajectory/: trajectory_planner.hpp
src/robot_core/launch/: experiment_examples_demo.launch.py
src/robot_core/src/: experiment_examples.cc  experiment_examples_demo_node.cc  filters.cc  ik_solver.cc  joint_space_pd_controller.cc  moveit_obstacle_avoidance_planner.cc  obstacle_avoidance_planner.cc  robot_model.cc  trajectory_planner.cc
src/robot_core/src/apps/: experiment_examples_demo_node.cc
src/robot_core/src/control/motion/joint_space/: joint_space_pd_controller.cc
src/robot_core/src/examples/: experiment_examples.cc
src/robot_core/src/filters/: filters.cc
src/robot_core/src/model/: robot_model.cc
src/robot_core/src/planning/avoidance/: moveit_obstacle_avoidance_planner.cc  obstacle_avoidance_planner.cc
src/robot_core/src/planning/ik/: ik_solver.cc
src/robot_core/src/planning/trajectory/: trajectory_planner.cc
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: iiwa7_controllers.yaml  iiwa7_effort_controllers.yaml
src/robot_description/launch/: robot.launch.py  robot_gazebo.launch.py  robot_gazebo_effort.launch.py
src/robot_description/urdf/: robot.urdf  robot_gazebo.urdf  robot_gazebo.urdf.bak  robot_gazebo_effort.urdf
src/robot_description/world/: custom_world.world
src/robot_description/world/robotroom/: model.config  model.sdf
src/robot_ros/: CMakeLists.txt  package.xml
src/robot_ros/config/: gazebo_admittance_controller.yaml  gazebo_effort_controller.yaml  gazebo_pose_effort_controller.yaml
src/robot_ros/include/robot_ros/: gazebo_admittance_controller.hpp  gazebo_effort_controller.hpp  gazebo_pose_controller.hpp  gazebo_pose_effort_controller.hpp  joint_state_demo.hpp
src/robot_ros/launch/: admittance_pose_effort_controller.launch.py  gazebo_pose_controller.launch.py  joint_effort_controller.launch.py  pose_effort_controller.launch.py  view_robot.launch.py
src/robot_ros/scripts/: ee_force_tester.py  keyboard_command_sender.py
src/robot_ros/src/: gazebo_admittance_controller.cc  gazebo_admittance_controller_main.cc  gazebo_effort_controller.cc  gazebo_effort_controller_main.cc  gazebo_pose_controller.cc  gazebo_pose_controller_main.cc  gazebo_pose_effort_controller.cc  gazebo_pose_effort_controller_main.cc  joint_state_demo.cc  joint_state_demo_main.cc
src/robot_utils/: CMakeLists.txt  package.xml
src/robot_utils/config/: logging.conf
src/robot_utils/include/robot_utils/: logging.hpp
src/robot_utils/src/: logging.cc
