<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_core</name>
  <version>0.0.0</version>
  <description>Core robotics algorithms and experiment demos for the iiwa7 ROS2 workspace.</description>
  <maintainer email="2028854016@qq.com">zhangjianglong</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具：标准 ament_cmake ROS2 包。 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 核心运行依赖：消息、Pinocchio、MoveIt 与 launch 配套能力。 -->
  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pinocchio</depend>
  <depend>rclcpp</depend>
  <depend>robot_description</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- 测试阶段主要执行 lint。 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
