<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>URDF, meshes, launch files, and controller configs for the iiwa7 robot model.</description>
  <maintainer email="2028854016@qq.com">zhangjianglong</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具：标准 ament_cmake 资源包。 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行期依赖：launch、Gazebo、ros2_control 与 TF 发布链路。 -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- 测试阶段主要执行 lint。 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
